# aiap22-colin-chan-yip-hang-961g

./: .gitignore  eda.ipynb  main.py  pyproject.toml  requirements.txt  run.sh
config/: data_split.yaml  feature_engineering.yaml  feature_engineering_config.md  global_feature_engineering.yaml  model.yaml  model_params.yaml  model_params_config.md  pre_split_integrity.yaml
src/: config.py  main.py  utils.py
src/features/: feature_engineering.py
src/model/: model.py
src/prep/: data_split.py  load.py  pre_split_integrity.py
tests/: conftest.py  test_load.py  test_preprocess.py
